--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Desafio2DH">
-        <activity android:name=".view.BebidasActivity"></activity>
-        <activity android:name=".view.MainActivity2" />
+        <activity android:name=".view.BebidasDetalhesActivity"></activity>
+        <activity android:name=".view.CervejariaPrincipalActivity" />
         <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
